# nl-kat-coordination

./: Makefile  docker-compose.release-example.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: boefjes-tests.yml  boefjes_container_image.yml  boefjes_tests.yml  build-debian-docker-image.yml  build-rdo-package.yml  build_docs_on_pr.yml  bytes-tests.yml  bytes_container_image.yml  bytes_tests.yml  check_requirements.yml  codeql.yml  containerized_boefjes.yml  debian_package.yml  deploy_docs.yml  mula-tests.yml  mula_container_image.yml  mula_tests.yml  octopoes-tests.yml  octopoes_container_image.yml  octopoes_rtest.yml  octopoes_tests.yml  pre_commit_checks.yml  rocky-tests.yml  rocky_container_image.yml  rocky_makelang.yml  rocky_tests.yml  sonar-cloud.yml  test_debian_packages_on_ubuntu.yml
boefjes/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
boefjes/debian/: control  copyright  rules
boefjes/images/: requirements.txt
boefjes/tests/: test_app.py  test_nikto_normalizer.py  test_tasks.py
bytes/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
bytes/bytes/: config.py
bytes/debian/: copyright
cveapi/: pyproject.toml  requirements.txt
cveapi/debian/: copyright
cveapi/packaging/scripts/: build-debian-package.sh
mula/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
octopoes/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
rocky/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
(+152 files in other folders)
