[project]
name = "cveapi"
version = "0.0.1.dev1"
description = "OpenKAT's CVE API"
authors = [{ name = "Stichting Librekat", email = "maintainer@librekat.nl" }]
license = { text = "EUPL-1.2" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "idna>=3.15",
]

[project.scripts]
cveapi = "cveapi:run"

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["debian*", "packaging*"]
